tests/invalids/twoPlus.gt
proc main ()
    int m;
begin
    m := m + + n;
end
